fix: images route

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -7,8 +7,8 @@
         class="d-flex align-items-center text-white gap-1 fw-semibold text-decoration-none rounded-pill"
       >
         <img
-          src="../../../assets/logo.avif"
-          alt="Obelisco"
+          src="/assets/logo.avif"
+          alt="Cat's Shop"
           height="45"
           class="d-inline-block align-text-top rounded-circle"
         />
