--- a/src/app/modules/about/about.component.html
+++ b/src/app/modules/about/about.component.html
@@ -40,7 +40,7 @@
         </p>
       </div>
       <img
-        src="../../../assets/about.svg"
+        src="/assets/about.svg"
         alt="Gato y perro"
         class="about-img"
       />
@@ -52,7 +52,7 @@
       class="d-flex flex-column flex-md-row align-items-center justify-content-center gap-3"
     >
       <img
-        src="../../../assets/contact.svg"
+        src="/assets/contact.svg"
         alt="Contactos"
         class="about-img"
       />
