--- a/src/app/modules/products/products.component.html
+++ b/src/app/modules/products/products.component.html
@@ -77,7 +77,7 @@
 
               <div class="products-image-box shrink">
                 <img
-                  src="../../../assets/products/products-cat.svg"
+                  src="/assets/products/products-cat.svg"
                   alt=""
                   class="rounded-circle my-2 shadow products-image"
                 />
