--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,11 +3,11 @@
     <h1 class="visually-hidden">Cat's Shop</h1>
     <nav class="d-flex align-items-center justify-content-between">
       <a
-        href="/"
+        href="/cats-shop"
         class="d-flex align-items-center text-white gap-1 fw-semibold text-decoration-none rounded-pill"
       >
         <img
-          src="/assets/logo.avif"
+          src="assets/logo.avif"
           alt="Cat's Shop"
           height="45"
           class="d-inline-block align-text-top rounded-circle"
