fix: contact image

--- a/src/app/modules/contact/contact.component.scss
+++ b/src/app/modules/contact/contact.component.scss
@@ -14,7 +14,7 @@
 
 .contact-bg {
   @media (min-width: 992px) {
-    background-image: url("/cats-shop/docs/assets/cat.svg");
+    background-image: url("/cats-shop/assets/cat.svg");
     background-repeat: no-repeat;
     background-position-x: left;
     background-position-y: top;
